--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,3 +1,13 @@
-<p>
-  items works!
-</p>
+<div *ngIf="items?.length > 0; else noItems">
+  <ul *ngFor="let item of items" class="collection">
+    <li class="collection-item">
+      <strong>{{item.title}}:  </strong>
+      {{item.description}}
+     </li>
+  </ul>
+</div>
+
+<ng-template #noItems>
+  <hr>
+  <h5>Fetching Data...</h5>
+</ng-template>
