--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,8 +1,27 @@
 <div *ngIf="items?.length > 0; else noItems">
   <ul *ngFor="let item of items" class="collection">
     <li class="collection-item">
+      <!-- dblclick: double click click: single click -->
       <strong>{{item.title}}:  </strong>
       {{item.description}}
+      <a href="#" class="secondary-content">
+        <i (click)="editItem($event, item)" class="fa fa-pencil"></i>
+        <i *ngIf="editState && itemToEdit.id == item.id" (click)="clearState()" class="fa fa-compress"></i>
+        <div *ngIf="editState && itemToEdit.id == item.id">
+          <form (ngSubmit)="updateItem(item)">
+            <div class="row">
+              <div class="input-field col s6">
+                <input type="text" placeholder="Edit Title" [(ngModel)]="item.title" name="title">
+              </div>
+              <div class="input-field col s6">
+                <input type="text" placeholder="Edit Description" [(ngModel)]="item.description" name="description">
+              </div>
+              <input type="submit" value="Update Item" class="btn orange">
+              <button (click)="deleteItem($event, item)" class="btn red">Delete Item</button>
+            </div>
+          </form>
+        </div>
+      </a>
      </li>
   </ul>
 </div>
